# genetic-boids

./: .gitignore  CMakeLists.txt
src/: agent.cpp  agent.h  conditions.cpp  conditions.h  config.h  main.cpp  neuralagent.cpp  neuralagent.h  neuron.cpp  neuron.h  random.cpp  random.h  sinks.h  sources.h  ui.cpp  ui.h  video.cpp  video.h
